--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME=pdt
 
 DJANGO_DB_NAME=django
 DJANGO_DB_USERNAME=django
@@ -13,3 +14,8 @@ OPENXPKI_DB_NAME=openxpki
 OPENXPKI_DB_USERNAME=openxpki
 OPENXPKI_DB_PASSWORD=openxpki
 OPENXPKI_DB_ROOT_PASSWORD=topsecret
+
+GUACAMOLE_DB_PASSWORD_ROOT=guacamole
+GUACAMOLE_DB_NAME=guacamole
+GUACAMOLE_DB_USERNAME=guacamole
+GUACAMOLE_DB_PASSWORD=guacamole
